Fixing error with quickjump display.

--- a/upload/style/imports/base.css
+++ b/upload/style/imports/base.css
@@ -261,8 +261,6 @@ DIV.txtarea TEXTAREA, INPUT.longinput {WIDTH: 100%}
 
 .pun LABEL {DISPLAY: block}
 
-#qjump SELECT {WIDTH: 50%}
-
 /****************************************************************/
 /* 10. HELP FILES AND MISC. */
 /****************************************************************/
